Add OpenGraph metadata (#57)
Co-authored-by: Lucy Hao <55033656+lhao03@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#98b7de" media="(prefers-color-scheme: light)" /> <!-- sets the search bar color to light blue in light mode on Safari 15 -->
+    <meta name="theme-color" content="#506c8f" media="(prefers-color-scheme: dark)" /> <!-- dark the search bar color to dark blue in dark mode on Safari 15 -->
+    <meta name="description" content="StarHacks is an international non-profit striving to create gender-inclusive spaces in computer science, breaking the stereotype of what it means to be a coder one hackathon at a time." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="StarHacks" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-  <!--
+    <meta property="og:title" content="StarHacks" />
+    <meta property="og:url" content="https://www.starhacks.tech/" />
+    <meta property="og:description" content="StarHacks is an international non-profit striving to create gender-inclusive spaces in computer science, breaking the stereotype of what it means to be a coder one hackathon at a time." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@starhackss" />
+    <meta name="twitter:creator" content="@starhackss" />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,18 +30,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>StarHacks</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DYVPL412TN"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <title>StarHacks</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DYVPL412TN"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    gtag('config', 'G-DYVPL412TN');
-  </script>
-</head>
-
+      gtag("config", "G-DYVPL412TN");
+    </script>
+  </head>
+  
 <body>
   <a id="mlh-trust-badge"
     style="display:block;max-width:135px;min-width:60px;position:absolute;right:2vw;top:0;width:10%;z-index:10000"
@@ -42,6 +55,7 @@
       alt="Major League Hacking 2022 Hackathon Season" style="width:100%"></a>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -52,6 +66,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
